2006-01-01  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Breathe some life into "last open"/"recently used"
	  button
	* MimeIcon.cs: Do a check for the top level media type also

2005-12-31  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs:
	  - Added CPDrawStringDisabled
	  - ButtonBase_DrawText: Workaround for a DrawString bug; cut off
	    some chars if the text doesn't fit into text_rect
	  - DrawListViewItem: If View = View.LargeIcon center the image;
	    rewrote the drawing of ListViewItem.Text if View = 
	    View.LargeIcon

2005-12-31  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs: Use default KDE icon theme if there is no
	  "48x48" directory for the current icon theme, fixes #77114
	* Mime.cs: Disable not working and actually not used code. 
	* ThemeWin32Classic.cs:
	  - Replace "new SolidBrush" in GetControlBackBrush and
	    GetControlForeBrush with ResPool.GetSolidBrush
	  - Changed DrawListViewItem from private to protected virtual
	* FileDialog.cs:
	  - Added form.MaximizeBox = true
	  - Don't throw an exception if there is a broken symbolic link

2005-12-23  Jackson Harper  <jackson@ximian.com>

	* TabControl.cs: Give the panels focus, keyboard navigation is
	fixed so this works correctly now.
	- We need these key events also.
	* ToolBar.cs: Remove some of the poor mans double buffering.
	
2005-12-24  Alexander Olk  <alex.olk@googlemail.com>

	* ComboBox.cs: The internal TextBox now returns the focus.

2005-12-23  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs:  Draw the text for all tab appearances.

2005-12-23  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: Removed debug code
	* XplatUIX11.cs: Changed DestroyChildWindows to also consider
	  implicit children

2005-12-23  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs: When creating the control, update the Z-order after
	  all it's children are created, too. (Fixes nexxia not showing
	  picturebox bug)
