@@ -1,3 +1,8 @@
+2006-01-02  Alexander Olk  <alex.olk@googlemail.com>
+
+	* FileDialog.cs: We are able to read recently used files now let's
+	  go on and write them.
+
 2006-01-01  Alexander Olk  <alex.olk@googlemail.com>
 
 	* FileDialog.cs: Breathe some life into "last open"/"recently used"
